--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ body { font-family: font-family: 'Sawarabi Mincho', sans-serif; width: 100%;}
 	.recruit-img img {
 		object-position: top center; 
 		width: 100%;
-			height: 100%; 
+		height: 100%; 
 		max-height: 24vh; 
 	}
 	
@@ -529,6 +529,8 @@ body { font-family: font-family: 'Sawarabi Mincho', sans-serif; width: 100%;}
 		padding: 3% 0% !important; 
 
 	}
+	
+	.footer-container { max-width: 1183px; }
 	
 	.footer nav {
 		position: relative;
@@ -571,6 +573,26 @@ body { font-family: font-family: 'Sawarabi Mincho', sans-serif; width: 100%;}
 		top: 0%; 
 		left: -18%; 
 	}
+	
+	/*---repair--*/
+	.navbar {
+		background: background: rgb(62,39,23);
+		padding: .5rem 1rem 1rem;
+	}
+	#home h2 {
+		font-size: 28px; 
+	}
+	.news-container {
+		flex-direction: column; 
+	}
+	.event-contents1 {
+		width: auto; 
+	}
+	.event-container::after {
+		width: 100%; 
+	}
+	.event-container { padding: 29px; }
+	.event-contents2 { padding: 0; }
 }
 
 /*iPad iPadPro-----------------------------------*/
